crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@540.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_add_bounds(nummultirange(numrange(1.0001, 123.123)));"
---
SelectStmt@0..66
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..62
    FuncCall@7..62
      Ident@7..23 "range_add_bounds"
      Ascii40@23..24 "("
      FuncCall@24..62
        Ident@24..37 "nummultirange"
        Ascii40@37..38 "("
        FuncCall@38..62
          Ident@38..46 "numrange"
          Ascii40@46..47 "("
          AConst@47..53
            Fconst@47..53 "1.0001"
          Ascii44@53..54 ","
          Whitespace@54..55 " "
          AConst@55..62
            Fconst@55..62 "123.123"
  Ascii41@62..63 ")"
  Ascii41@63..64 ")"
  Ascii41@64..65 ")"
  Ascii59@65..66 ";"

