crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@541.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function multirangetypes_sql(q anymultirange, b anyarray, out c anyelement)\n  as $$ select upper($1) + $2[1] $$\n  language sql;"
---
CreateFunctionStmt@0..134
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..35 "multirangetypes_sql"
  Ascii40@35..36 "("
  FunctionParameter@36..51
    Ident@36..37 "q"
    Whitespace@37..38 " "
    TypeName@38..51
      Ident@38..51 "anymultirange"
  Ascii44@51..52 ","
  Whitespace@52..53 " "
  FunctionParameter@53..63
    Ident@53..54 "b"
    Whitespace@54..55 " "
    TypeName@55..63
      Ident@55..63 "anyarray"
  Ascii44@63..64 ","
  Whitespace@64..65 " "
  FunctionParameter@65..81
    OutP@65..68 "out"
    Whitespace@68..69 " "
    Ident@69..70 "c"
    Whitespace@70..71 " "
    TypeName@71..81
      Ident@71..81 "anyelement"
  Ascii41@81..82 ")"
  Newline@82..83 "\n"
  Whitespace@83..85 "  "
  DefElem@85..118
    As@85..87 "as"
    Whitespace@87..88 " "
    List@88..118
      Sconst@88..118 "$$ select upper($1) + ..."
  Newline@118..119 "\n"
  Whitespace@119..121 "  "
  DefElem@121..133
    Language@121..129 "language"
    Whitespace@129..130 " "
    SqlP@130..133 "sql"
  Ascii59@133..134 ";"

