crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@545.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select anycompatiblearray_anycompatiblemultirange_func(ARRAY[1,2], multirange(int4range(10,20)));"
---
SelectStmt@0..97
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..93
    FuncCall@7..93
      Ident@7..54 "anycompatiblearray_an ..."
      Ascii40@54..55 "("
      AArrayExpr@55..64
        Array@55..60 "ARRAY"
        Ascii91@60..61 "["
        AConst@61..62
          Iconst@61..62 "1"
        Ascii44@62..63 ","
        AConst@63..64
          Iconst@63..64 "2"
      Ascii93@64..65 "]"
      Ascii44@65..66 ","
      Whitespace@66..67 " "
      FuncCall@67..93
        Ident@67..77 "multirange"
        Ascii40@77..78 "("
        FuncCall@78..93
          Ident@78..87 "int4range"
          Ascii40@87..88 "("
          AConst@88..90
            Iconst@88..90 "10"
          Ascii44@90..91 ","
          AConst@91..93
            Iconst@91..93 "20"
  Ascii41@93..94 ")"
  Ascii41@94..95 ")"
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

