crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@546.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select anycompatiblearray_anycompatiblemultirange_func(ARRAY[1,2], multirange(numrange(10,20)));"
---
SelectStmt@0..96
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..92
    FuncCall@7..92
      Ident@7..54 "anycompatiblearray_an ..."
      Ascii40@54..55 "("
      AArrayExpr@55..64
        Array@55..60 "ARRAY"
        Ascii91@60..61 "["
        AConst@61..62
          Iconst@61..62 "1"
        Ascii44@62..63 ","
        AConst@63..64
          Iconst@63..64 "2"
      Ascii93@64..65 "]"
      Ascii44@65..66 ","
      Whitespace@66..67 " "
      FuncCall@67..92
        Ident@67..77 "multirange"
        Ascii40@77..78 "("
        FuncCall@78..92
          Ident@78..86 "numrange"
          Ascii40@86..87 "("
          AConst@87..89
            Iconst@87..89 "10"
          Ascii44@89..90 ","
          AConst@90..92
            Iconst@90..92 "20"
  Ascii41@92..93 ")"
  Ascii41@93..94 ")"
  Ascii41@94..95 ")"
  Ascii59@95..96 ";"

