crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@549.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function anycompatiblerange_anycompatiblemultirange_func(r anycompatiblerange, mr anycompatiblemultirange)\n  returns anycompatible as 'select lower($1) + lower($2);' language sql;"
---
CreateFunctionStmt@0..186
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..63 "anycompatiblerange_an ..."
  Ascii40@63..64 "("
  FunctionParameter@64..84
    Ident@64..65 "r"
    Whitespace@65..66 " "
    TypeName@66..84
      Ident@66..84 "anycompatiblerange"
  Ascii44@84..85 ","
  Whitespace@85..86 " "
  FunctionParameter@86..112
    Ident@86..88 "mr"
    Whitespace@88..89 " "
    TypeName@89..112
      Ident@89..112 "anycompatiblemultirange"
  Ascii41@112..113 ")"
  Newline@113..114 "\n"
  Whitespace@114..116 "  "
  Returns@116..123 "returns"
  Whitespace@123..124 " "
  TypeName@124..137
    Ident@124..137 "anycompatible"
  Whitespace@137..138 " "
  DefElem@138..172
    As@138..140 "as"
    Whitespace@140..141 " "
    List@141..172
      Sconst@141..172 "'select lower($1) + l ..."
  Whitespace@172..173 " "
  DefElem@173..185
    Language@173..181 "language"
    Whitespace@181..182 " "
    SqlP@182..185 "sql"
  Ascii59@185..186 ";"

