crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@55.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select int4range(null, null)::int4multirange;"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    TypeCast@7..44
      FuncCall@7..27
        Ident@7..16 "int4range"
        Ascii40@16..17 "("
        AConst@17..21
          NullP@17..21 "null"
        Ascii44@21..22 ","
        Whitespace@22..23 " "
        AConst@23..27
          NullP@23..27 "null"
      Ascii41@27..28 ")"
      Typecast@28..30 "::"
      TypeName@30..44
        Ident@30..44 "int4multirange"
  Ascii59@44..45 ";"

