crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@550.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select anycompatiblerange_anycompatiblemultirange_func(int4range(1,2), multirange(int4range(10,20)));"
---
SelectStmt@0..101
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..97
    FuncCall@7..97
      Ident@7..54 "anycompatiblerange_an ..."
      Ascii40@54..55 "("
      FuncCall@55..68
        Ident@55..64 "int4range"
        Ascii40@64..65 "("
        AConst@65..66
          Iconst@65..66 "1"
        Ascii44@66..67 ","
        AConst@67..68
          Iconst@67..68 "2"
      Ascii41@68..69 ")"
      Ascii44@69..70 ","
      Whitespace@70..71 " "
      FuncCall@71..97
        Ident@71..81 "multirange"
        Ascii40@81..82 "("
        FuncCall@82..97
          Ident@82..91 "int4range"
          Ascii40@91..92 "("
          AConst@92..94
            Iconst@92..94 "10"
          Ascii44@94..95 ","
          AConst@95..97
            Iconst@95..97 "20"
  Ascii41@97..98 ")"
  Ascii41@98..99 ")"
  Ascii41@99..100 ")"
  Ascii59@100..101 ";"

