crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@556.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into i8mr_array values (42, array[int8multirange(int8range(1,10)), int8multirange(int8range(2,20))]);"
---
InsertStmt@0..108
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "i8mr_array"
  Whitespace@22..23 " "
  SelectStmt@23..103
    Values@23..29 "values"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..103
      AConst@31..33
        Iconst@31..33 "42"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AArrayExpr@35..103
        Array@35..40 "array"
        Ascii91@40..41 "["
        FuncCall@41..70
          Ident@41..55 "int8multirange"
          Ascii40@55..56 "("
          FuncCall@56..70
            Ident@56..65 "int8range"
            Ascii40@65..66 "("
            AConst@66..67
              Iconst@66..67 "1"
            Ascii44@67..68 ","
            AConst@68..70
              Iconst@68..70 "10"
        Ascii41@70..71 ")"
        Ascii41@71..72 ")"
        Ascii44@72..73 ","
        Whitespace@73..74 " "
        FuncCall@74..103
          Ident@74..88 "int8multirange"
          Ascii40@88..89 "("
          FuncCall@89..103
            Ident@89..98 "int8range"
            Ascii40@98..99 "("
            AConst@99..100
              Iconst@99..100 "2"
            Ascii44@100..101 ","
            AConst@101..103
              Iconst@101..103 "20"
  Ascii41@103..104 ")"
  Ascii41@104..105 ")"
  Ascii93@105..106 "]"
  Ascii41@106..107 ")"
  Ascii59@107..108 ";"

